FEBE10/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-a53fa300-7190-4851-8bc1-e156470b59db
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-a53fa300-7190-4851-8bc1-e156470b59db
  template:
    metadata:
      labels:
        app: springboot-app-a53fa300-7190-4851-8bc1-e156470b59db
    spec:
      containers:
      - name: springboot
        image: ravi8881/85c8a741-63c7-438b-8abe-9fe23efa41e5-ravisuborg1-ravidevenv-9dd0c8bf-0a27-4293-9442-db5b86a7c07f-graph:18.0.0
        ports:
        - containerPort: 8081
