FEBE10/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-a53fa300-7190-4851-8bc1-e156470b59db
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
spec:
  selector:
    app: springboot-app-a53fa300-7190-4851-8bc1-e156470b59db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
