FEBE10/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-a53fa300-7190-4851-8bc1-e156470b59db
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
  labels:
    app: springboot-app-a53fa300-7190-4851-8bc1-e156470b59db
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - backend:
              service:
                name: springboot-service-a53fa300-7190-4851-8bc1-e156470b59db
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-a53fa300-7190-4851-8bc1-e156470b59db
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
